--- a/demos/00-PBMF-demo.ipynb
+++ b/demos/00-PBMF-demo.ipynb
@@ -11,7 +11,12 @@
     "\n",
     "* We will evaluate the biomarker in a twin Phase 3 clinical trial (OAK). \n",
     "\n",
-    "* We are using parameters that make the execution faster (~5 min). For improved performance (slower run) increase the number of models (e.g., num_models=100). "
+    "* We are using a set of parameters that make the execution faster (~5 min). For improved performance (slower run) increase the number of models (e.g., num_models=100).\n",
+    "* Expect minor variations depending on the hardware / architecture and library versions. \n",
+    "\n",
+    "**What to expect from this demo**\n",
+    "* Familiarize with the PBMF API throught he whole proces for identifying predictive biomarkers. \n",
+    "* You will be able to run the PBMF in your own data. "
    ]
   },
   {
