fix libraries in simulation example

--- a/demos/simulations/Example for dataset simulation.ipynb
+++ b/demos/simulations/Example for dataset simulation.ipynb
@@ -29,15 +29,21 @@
     "import os\n",
     "import tqdm\n",
     "\n",
-    "\n",
-    "sys.path.append(os.path.abspath('../../whatif_simulator/'))\n",
-    "sys.path.append(os.path.abspath('../../'))\n",
-    "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "%load_ext autoreload\n",
-    "%autoreload 2"
+    "%autoreload 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce0eb338",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# any required package can be installed with pip install\n"
    ]
   },
   {
@@ -60,8 +66,8 @@
    },
    "outputs": [],
    "source": [
-    "from whatif_simulator.simulate import covariate_creator, simulate_and_censor, covariate_extend, binary_to_continous2\n",
-    "from lifelines import KaplanMeierFitter, CoxPHFitter"
+    "from .simulate import covariate_creator, simulate_and_censor, covariate_extend, binary_to_continous2\n",
+    "from lifelines import KaplanMeierFitter, CoxPHFitter\n"
    ]
   },
   {
@@ -106,7 +112,7 @@
     "    varnames = ['trt']\n",
     "    for i in range(n):\n",
     "        varnames.append('var{}'.format(i+1))\n",
-    "    return varnames"
+    "    return varnames\n"
    ]
   },
   {
@@ -160,7 +166,7 @@
     "df = binary_to_continous2(df, create_varnames(N)[1:])\n",
     "df['i'] = i\n",
     "dfs.append(df)\n",
-    "dfs = pd.concat(dfs)"
+    "dfs = pd.concat(dfs)\n"
    ]
   },
   {
@@ -326,7 +332,7 @@
     }
    ],
    "source": [
-    "dfs"
+    "dfs\n"
    ]
   },
   {
@@ -595,7 +601,7 @@
     "cph = CoxPHFitter()\n",
     "cph.fit(df, duration_col='observed_t', event_col='event', \n",
     "        formula='trt + var1 + var2 + var1 * trt + var2 * trt + var1*var2')\n",
-    "cph.print_summary()"
+    "cph.print_summary()\n"
    ]
   },
   {
@@ -631,7 +637,7 @@
    "source": [
     "N = 1000\n",
     "X2 = covariate_creator(means = create_means(N), binarize=True, seed=i, size=10000, p = create_ps(N))\n",
-    "df2 = binary_to_continous2(X2, create_varnames(N)[1:])"
+    "df2 = binary_to_continous2(X2, create_varnames(N)[1:])\n"
    ]
   },
   {
@@ -641,7 +647,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_final = pd.concat([dfs[['trt','observed_t','event','var1','var2']], df2.iloc[:,3:]], axis = 1)"
+    "df_final = pd.concat([dfs[['trt','observed_t','event','var1','var2']], df2.iloc[:,3:]], axis = 1)\n"
    ]
   },
   {
@@ -746,7 +752,7 @@
     }
    ],
    "source": [
-    "df_final[['var1','var2','var3','var4','var5']].corr()"
+    "df_final[['var1','var2','var3','var4','var5']].corr()\n"
    ]
   },
   {
@@ -797,7 +803,7 @@
     "kmf.plot(show_censors=False, ci_show = False, ax = ax, color = 'black', alpha = 1, label = 'trt = 1, var1 >= 0')\n",
     "\n",
     "plt.axhline(0, color = 'k', ls ='--', alpha = 0.3)\n",
-    "#fig.savefig('10K predictive biomarker slighlty prognostic - var1.png')"
+    "#fig.savefig('10K predictive biomarker slighlty prognostic - var1.png')\n"
    ]
   },
   {
@@ -858,7 +864,7 @@
     "kmf.plot(show_censors=False, ci_show = False, ax = ax, color = 'black', alpha = 1, label = 'trt = 1, var2 >= 0')\n",
     "\n",
     "plt.axhline(0, color = 'k', ls ='--', alpha = 0.3)\n",
-    "#fig.savefig('10K predictive biomarker slighlty prognostic - var1.png')"
+    "#fig.savefig('10K predictive biomarker slighlty prognostic - var1.png')\n"
    ]
   }
  ],
